include $(top_srcdir)/Makefile.common

noinst_LIBRARIES=libcsg.a

libcsg_a_SOURCES= \
  bbox.cpp \
  exceptions.cpp \
  oct_traverse.cpp \
  sphere_volume.cpp \
  volume.cpp \
  volume_traverse.cpp
#libcsg_a_SOURCES= \
#  bbox.cpp \
#  mesh_visualization.cpp \
#  object.cpp \
#  pixel.cpp \
#  surface.cpp \
#  volume.cpp \
#  voxel.cpp
